--- a/static/css/room.css
+++ b/static/css/room.css
@@ -148,43 +148,29 @@
 
 .stream-header .edit.icon {
     float: left;
-    padding: 0.5em 0.5em 0 0;
+    font-size: 1.2em;
+    padding-left: 0;
 }
 
-.stream-header form + .edit,
-.stream-header form + .edit + .name {
+.stream-header > form + .edit,
+.stream-header > form + .edit + .name {
     display: none;
 }
 
-.stream-header form {
-    display: flex;
-    font-size: 0.83em;
-    align-items: center;
-}
-
-.stream-header form input,
-.stream-header form button {
-    flex: 0 0 auto;
-    height: 33px;  /* = 1.5 * 1.6em rounded down to px = h1's height */
+.stream-header > form,
+.stream-header > form > * {
     margin: 0;
+    height: 2.4em;  /* = 1.5 * 1.6em = h1's height */
+    vertical-align: middle;
 }
 
-.stream-header form input[type="text"] {
-    flex: 1;
-    width: auto;
-    min-width: 0;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+.stream-header > form > input[type="text"] {
+    width: 50%;
+    max-width: calc(100% - 4.3em);
 }
 
-.stream-header form button {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    margin-right: 1em;
-}
-
-.stream-header form input[type="checkbox"] {
-    margin-right: 0.5em;
+.stream-header > form > input[type="checkbox"] {
+    margin-left: 1em;
 }
 
 .stream-meta {
