--- a/static/css/room.css
+++ b/static/css/room.css
@@ -233,16 +233,13 @@
 
 .chat .name {
     font-weight: bold;
-}
-
-.chat .name.anon:before {
-    font: normal 1em/1 FontAwesome;
-    content: '\f21b';  /* user-secret */
     margin-right: 0.33em;
 }
 
-.chat .input {
-    width: 100%;
+.chat .name[title=""]:before {
+    font: normal 1em/1 FontAwesome;
+    content: '\f21b';  /* user-secret */
+    margin-right: 0.33em;
 }
 
 .chat form {
@@ -253,6 +250,10 @@
 
 .chat form .error {
     margin: 1em 0 0 0;
+}
+
+.chat textarea {
+    width: 100%;
 }
 
 body:not(.aside-chat) .chat form .error {
