List some alternative fonts
in case the web font doesn't load.

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -8,8 +8,8 @@
 }
 
 html {
-    font: normal 14px/1.5 'Source Sans Pro', sans-serif;
-    color: #222;
+    font: normal 14px/1.5 'Source Sans Pro', 'Trebuchet MS', Helvetica, sans-serif;
+    color: #000;
 }
 
 html, body {
