--- a/templates/room.html
+++ b/templates/room.html
@@ -130,7 +130,9 @@
             {{ template "footer.html" }}
             <script src="/static/js/vendored.min.js"></script>
             <script src="/static/js/global.js"></script>
+            <script src="//twemoji.maxcdn.com/2/twemoji.min.js"></script>
             <script src="/static/js/room.js"></script>
+            <script src="/static/js/emoji.js"></script>
         </main>
     </body>
 </html>
