--- a/templates/error.html
+++ b/templates/error.html
@@ -27,7 +27,7 @@
             }
 
             #message { text-align: center; }
-            #message:before {
+            #message::before {
                 content: 'NO SIGNAL / ';
                 opacity: 0.66;
             }
