--- a/templates/user-control.html
+++ b/templates/user-control.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/global.css" />
-        <title>webmcast // authentication</title>
+        <title>Login page of webmcast</title>
         <style>
             nav a[href^="/user/"] { display: none !important; }
             section { max-width: 26em; }
