--- a/static/css/room.css
+++ b/static/css/room.css
@@ -53,24 +53,29 @@
     position: relative;
 }
 
-@media (min-width: 80.17em /* use 100% on narrow screens */) and (max-width: 92em) {
-    body:not(.aside-chat) nav,
-    body:not(.aside-chat) section,
-    body:not(.aside-chat) footer {
-        max-width: 91.3%;  /* seamlessly transitions into the value below */
-    }
-
-    body:not(.aside-chat) .player-block:not(.theatre) {
-        max-width: calc(91.3% - 4em);  /* add padding that is already present on other elements */
+/* NOTE: in @media, 1em = 16px (rem = 14/16 * em) */
+@media (min-width: 66.5em) and (max-width: 80.5em) {
+    body:not(.audio-only) nav,
+    body:not(.audio-only) section:not(.player-block),
+    body:not(.audio-only) footer {
+        max-width: 100%;
     }
 }
 
-@media (min-width: 92em) and (min-height: 52.56em) {
-    nav, section, footer { max-width: 96rem; }
+@media (min-width: 73.5em) and (max-width: 80.5em) {
+    body:not(.audio-only) .player-block {
+        max-width: calc(100% - 4rem);  /* add padding that is already present on other elements */
+    }
 }
 
-@media (min-width: 106em) and (min-height: 60.44em) {
-    nav, section, footer { max-width: 112rem; }
+@media (min-width: 80.5em) and (min-height: 46em) {
+    nav, section, footer { max-width: 92rem; }
+    .player-block { max-width: 88rem; }
+}
+
+@media (min-width: 92.75em) and (min-height: 53em) {
+    nav, section, footer { max-width: 106rem; }
+    .player-block { max-width: 102rem; }
 }
 
 .player.has-video::after {
@@ -224,9 +229,8 @@
 }
 
 .chat h1 {
-    margin: 0 0.8em;
-    padding: 1em;
-    font-size: 1.2em;
+    margin: 0 1em;
+    padding: 0.5em 0;
     font-weight: bold;
     text-align: center;
     border-bottom: 1px solid rgba(127,127,127,0.33);
@@ -308,6 +312,7 @@ body:not(.aside-chat) .chat form .error {
 .player:not(.has-audio) .volume,
 .player:not(.has-video) svg,
 .player:not(.has-video) video,
+body.aside-chat .player .theatre,
 .player:not(.has-video) .theatre,
 .player:not(.has-video) .collapse,
 .player:not(.has-video) .fullscreen,
@@ -316,7 +321,7 @@ body:not(.aside-chat) .chat form .error {
 .player.is-fullscreen .theatre,
 .player.is-fullscreen .fullscreen,
 .player-block.theatre .player .theatre,
-.player-block:not(.theatre) .player:not(.is-fullscreen) .collapse,
+body:not(.aside-chat) .player-block:not(.theatre) .player:not(.is-fullscreen) .collapse,
 .no-fullscreen .player .fullscreen,
 .chat.online .offline-message,
 .chat.logged-in .login-form,
@@ -347,7 +352,7 @@ body:not(.aside-chat) .chat form .error {
     }
 
     body.aside-chat .chat {
-        top: 100%;
+        top: calc(100% + 2rem);
         height: calc(100vh - 7.33em);
         max-height: 45rem;
         margin-left: -20rem;
@@ -398,11 +403,5 @@ body:not(.aside-chat) .chat form .error {
 
     .player-block.theatre .player .controls {
         padding-right: 2em;  /* avoid overlap with .chat-tab */
-    }
-}
-
-@media (max-width: 70em) {
-    .player .theatre {
-        display: none !important;  /* already at 100% width anyway */
     }
 }
