--- a/templates/error.html
+++ b/templates/error.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=VT323'>
-        <title>webmcast error {{.Code}}</title>
+        <title>{{.Code}} &mdash; webmcast</title>
         <style>
             html, body { height: 100%; }
             body {
