--- a/templates/recordings.html
+++ b/templates/recordings.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/css/global.css" />
-        <title>webmcast // {{.ID}} // archives</title>
+        <title>{{.ID}} &mdash; archives of webmcast</title>
         <style>
         </style>
     </head>
